--- a/exploring_dataset.ipynb
+++ b/exploring_dataset.ipynb
@@ -1648,46 +1648,46 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>22257</th>\n",
-       "      <td>The Captains</td>\n",
-       "      <td>documentary</td>\n",
-       "      <td>[Documentary]</td>\n",
+       "      <th>13069</th>\n",
+       "      <td>Mortal Kombat: Annihilation</td>\n",
+       "      <td>action</td>\n",
+       "      <td>[Action]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19388</th>\n",
-       "      <td>Ice Cold in Alex</td>\n",
-       "      <td>world war ii</td>\n",
-       "      <td>[World War Ii]</td>\n",
+       "      <th>13928</th>\n",
+       "      <td>The Pledge</td>\n",
+       "      <td>crime drama</td>\n",
+       "      <td>[Crime Drama]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>17490</th>\n",
-       "      <td>The Club</td>\n",
-       "      <td>comedy drama</td>\n",
-       "      <td>[Comedy Drama]</td>\n",
+       "      <th>17443</th>\n",
+       "      <td>Oz</td>\n",
+       "      <td>musical</td>\n",
+       "      <td>[Musical]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16779</th>\n",
-       "      <td>Kid Cannabis</td>\n",
-       "      <td>comedy-drama</td>\n",
-       "      <td>[Comedy-Drama]</td>\n",
+       "      <th>1383</th>\n",
+       "      <td>Prosperity</td>\n",
+       "      <td>comedy, drama</td>\n",
+       "      <td>[Comedy, Drama]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5007</th>\n",
-       "      <td>The Sun Comes Up</td>\n",
-       "      <td>family</td>\n",
-       "      <td>[Family]</td>\n",
+       "      <th>32603</th>\n",
+       "      <td>Uyyala Jampala</td>\n",
+       "      <td>romance</td>\n",
+       "      <td>[Romance]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  Title         Genre      genre_list\n",
-       "22257      The Captains   documentary   [Documentary]\n",
-       "19388  Ice Cold in Alex  world war ii  [World War Ii]\n",
-       "17490          The Club  comedy drama  [Comedy Drama]\n",
-       "16779      Kid Cannabis  comedy-drama  [Comedy-Drama]\n",
-       "5007   The Sun Comes Up        family        [Family]"
+       "                             Title          Genre       genre_list\n",
+       "13069  Mortal Kombat: Annihilation         action         [Action]\n",
+       "13928                   The Pledge    crime drama    [Crime Drama]\n",
+       "17443                           Oz        musical        [Musical]\n",
+       "1383                    Prosperity  comedy, drama  [Comedy, Drama]\n",
+       "32603               Uyyala Jampala        romance        [Romance]"
       ]
      },
      "execution_count": 37,
