workflow code modified and the web search corrected reranking implemented by cross encoders

--- a/exploring_dataset.ipynb
+++ b/exploring_dataset.ipynb
@@ -1648,46 +1648,46 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>13069</th>\n",
-       "      <td>Mortal Kombat: Annihilation</td>\n",
-       "      <td>action</td>\n",
-       "      <td>[Action]</td>\n",
+       "      <th>11930</th>\n",
+       "      <td>White Men Can't Jump</td>\n",
+       "      <td>comedy</td>\n",
+       "      <td>[Comedy]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13928</th>\n",
-       "      <td>The Pledge</td>\n",
-       "      <td>crime drama</td>\n",
-       "      <td>[Crime Drama]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17443</th>\n",
-       "      <td>Oz</td>\n",
-       "      <td>musical</td>\n",
-       "      <td>[Musical]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1383</th>\n",
-       "      <td>Prosperity</td>\n",
-       "      <td>comedy, drama</td>\n",
-       "      <td>[Comedy, Drama]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>32603</th>\n",
-       "      <td>Uyyala Jampala</td>\n",
+       "      <th>10449</th>\n",
+       "      <td>The Slugger's Wife</td>\n",
        "      <td>romance</td>\n",
        "      <td>[Romance]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3099</th>\n",
+       "      <td>Ladies in Retirement</td>\n",
+       "      <td></td>\n",
+       "      <td>[]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28227</th>\n",
+       "      <td>Chaappa Kurish (ചാപ്പാ കുരിശു്)</td>\n",
+       "      <td>thriller</td>\n",
+       "      <td>[Thriller]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4844</th>\n",
+       "      <td>Batman and Robin</td>\n",
+       "      <td>serial</td>\n",
+       "      <td>[Serial]</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                             Title          Genre       genre_list\n",
-       "13069  Mortal Kombat: Annihilation         action         [Action]\n",
-       "13928                   The Pledge    crime drama    [Crime Drama]\n",
-       "17443                           Oz        musical        [Musical]\n",
-       "1383                    Prosperity  comedy, drama  [Comedy, Drama]\n",
-       "32603               Uyyala Jampala        romance        [Romance]"
+       "                                 Title     Genre  genre_list\n",
+       "11930             White Men Can't Jump    comedy    [Comedy]\n",
+       "10449               The Slugger's Wife   romance   [Romance]\n",
+       "3099              Ladies in Retirement                    []\n",
+       "28227  Chaappa Kurish (ചാപ്പാ കുരിശു്)  thriller  [Thriller]\n",
+       "4844                  Batman and Robin    serial    [Serial]"
       ]
      },
      "execution_count": 37,
